samples/_failures_safe/1761722362_de6701_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9935a00f.c: In function ‘main’:
./samples/SAFE/__tmp_9935a00f.c:146:9: error: expected expression at end of input
  146 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_9935a00f.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9935a00f.c:146:9: error: expected declaration or statement at end of input
